# listen

./: .gitignore  README.md  build-appimage.sh  build-packages.sh  install.sh  listen.py  packages.txt  pyproject.toml  recorder.py  requirements.txt  setup.sh  transcriber.py  uninstall.sh
appimage/: AppRun  listen.desktop
debian/: changelog  control  copyright  listen-installer.sh  listen-wrapper.sh  postinst  postrm  rules
docs/: README.md  api-reference.md  architecture.md  build-packaging.md  contributing.md  decisions.md  modules.md
packaging/rpm/: listen.rpkg
src/: test_recorder.py
src/listen_app/: __init__.py  cli.py  gui.py  recorder.py  transcriber.py
