[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "listen"
version = "1.0.0"
description = "Voice-to-text transcription tool for Linux using Whisper"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Abubaker Khaled" }
]
keywords = ["voice", "speech", "transcription", "whisper", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "PyAudio>=0.2.14",
    "faster-whisper>=1.0.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "rich>=13.0.0",
]

[project.scripts]
listen = "listen_app.cli:main"

[project.urls]
Homepage = "https://github.com/abubakerKhaled/listen"
Repository = "https://github.com/abubakerKhaled/listen"

[tool.hatch.build.targets.wheel]
packages = ["src/listen_app"]
